--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ li {
 }
 
 /* Initial appearance on load */
-#view-party-type, #view-donor-type, #view-source-type {
+#view-party-type, #view-donor-type, #view-source-type, view_amount-type {
     display: none;
 }
 
@@ -40,6 +40,29 @@ li {
     width: 272px;
 }
 
+#view-amount-type {
+    height: 100%;
+}
+#amount1 {
+    left: 150px;
+    top: 230px;
+    position: absolute;
+}
+#amount2 {
+    left: 425px;
+    top: 265px;
+    position: absolute; 
+}
+#amount3 {
+    left: 700px;
+    top: 300px;
+    position: absolute; 
+}
+#amount4 {
+    top: 120px;
+    left: 425px;
+    position: absolute;
+}
 /*  Public or private funds view */
 
 #public-or-private-money {
