--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@ li {
 
 /* 	Information boxes for different chart layouts */
 /* Positioning */
-#initial-content, #a, #b, #c, #d, #e, #f, #view-amount-type, #view-party-type, #view-donor-type, #view-source-type, #partyInfo, #conservative, #labour, #libdem, #individual, #company, #union, #society, #other, #public-or-private-money, #public-or-private-money-split, #private-money, #public-money { 
+#initial-content, #a, #b, #c, #d, #e, #f, #view-amount-type, #amount1, #amount2, #amount3, #amount4,#view-party-type, #view-donor-type, #view-source-type, #partyInfo, #conservative, #labour, #libdem, #individual, #company, #union, #society, #other, #public-or-private-money, #public-or-private-money-split, #private-money, #public-money { 
     position: absolute; 
 }
 
 /* Initial appearance on load */
-#view-party-type, #view-donor-type, #view-source-type, #view-amount-type{
+#view-party-type, #view-donor-type, #view-source-type, #view-amount-type {
     display: none;
 }
 
@@ -44,25 +44,21 @@ li {
     height: 100%;
 }
 #amount1 {
-    left: 150px;
-    top: 230px;
-    position: absolute;
+    left: -40px;
+    top: 335px;
 }
 #amount2 {
-    left: 425px;
-    top: 265px;
-    position: absolute; 
+    left: 30px;
+    top: 185px;
 }
 #amount3 {
-    left: 700px;
-    top: 300px;
-    position: absolute; 
+    top: 55px;
 }
 #amount4 {
     top: 120px;
     left: 425px;
-    position: absolute;
 }
+
 /*  Public or private funds view */
 
 #public-or-private-money {
@@ -86,16 +82,16 @@ li {
 /*  Party view */
 #conservative, #labour, #libdem { padding: 10px; }
 #conservative {
-    background: rgba(33, 255, 76, 0.8);
+    background: rgba(255, 0, 0, 0.5);
     top: 110px;
 }
 #labour {
-    background: rgba(252, 103, 34, 0.8);
+    background: rgba(0, 255 , 0, 1);
     top: 330px;
 }
 #libdem {
-    background: rgba(255, 61, 255, 0.8);
-    top: 550px;
+    background: rgba(0, 0, 255, 0.5);
+    top: 550px; 
 }
 
 /*	Donor type layout */
@@ -175,13 +171,13 @@ circle.active {
     margin: 0.2em;
 }
 .lab {
-    fill: #F02233;
+    fill: #008000; /*change to green*/
 }
 .lib {
-    fill: #FDBB30;
+    fill: #0000FF; /*change to blue*/
 }
 .con {
-    fill: #087FBD;
+    fill: #FF0000; /*change to red*/
 }
 .snp {
     fill: #C9C945;
@@ -224,7 +220,7 @@ https://github.com/yui/pure/blob/master/LICENSE.md
     padding: 0.5em 1.5em 0.5em;
     color: #444;
     /* rgba not supported (IE 8) */
-    color: rgba(0, 0, 0, 0.80);
+    color: rgba(0, 0, 0, 0.8);
     /* rgba supported */
     *color: #444;
     /* IE 6 & 7 */
