--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@ li {
 
 /* 	Information boxes for different chart layouts */
 /* Positioning */
-#initial-content, #a, #b, #c, #d, #e, #f, #view-amount-type, #amount1, #amount2, #amount3, #amount4,#view-party-type, #view-donor-type, #view-source-type, #partyInfo, #conservative, #labour, #libdem, #individual, #company, #union, #society, #other, #public-or-private-money, #public-or-private-money-split, #private-money, #public-money { 
+#initial-content, #a, #b, #c, #d, #e, #f, #view-by-amount, #enormous, #huge, #large, #view-party-type, #view-donor-type, #view-source-type, #partyInfo, #conservative, #labour, #libdem, #individual, #company, #union, #society, #other, #public-or-private-money, #public-or-private-money-split, #private-money, #public-money { 
     position: absolute; 
 }
 
 /* Initial appearance on load */
-#view-party-type, #view-donor-type, #view-source-type, #view-amount-type {
+#view-party-type, #view-donor-type, #view-source-type, #view-by-amount {
     display: none;
 }
 
@@ -40,24 +40,21 @@ li {
     width: 272px;
 }
 
-#view-amount-type {
+#view-by-amount {
+    height: 100%;
     left: 450px;
     width: 370px;
 }
-#amount1 {
-    left: -40px;
-    top: 335px;
-}
-#amount2 {
-    left: 30px;
-    top: 185px;
-}
-#amount3 {
+#enormous {
     top: 55px;
 }
-#amount4 {
-    top: 120px;
-    left: 425px;
+#huge {
+    top: 185px;
+    left: 30px;
+}
+#large {
+    top: 335px;
+    left: -40px;
 }
 
 /*  Public or private funds view */
