--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@ li {
 
 /* 	Information boxes for different chart layouts */
 /* Positioning */
-#initial-content, #a, #b, #c, #d, #e, #f, #view-by-amount, #enormous, #huge, #large, #view-party-type, #view-donor-type, #view-source-type, #partyInfo, #conservative, #labour, #libdem, #individual, #company, #union, #society, #other, #public-or-private-money, #public-or-private-money-split, #private-money, #public-money { 
+#initial-content, #a, #b, #c, #d, #e, #f/*, #view-by-amount, #enormous, #huge, #large*/, #view-party-type, #view-donor-type, #view-source-type, #partyInfo, #conservative, #labour, #libdem, #individual, #company, #union, #society, #other, #public-or-private-money, #public-or-private-money-split, #private-money, #public-money { 
     position: absolute; 
 }
 
 /* Initial appearance on load */
-#view-party-type, #view-donor-type, #view-source-type, #view-by-amount {
+#view-party-type, #view-donor-type, #view-source-type/*, #view-by-amount*/ {
     display: none;
 }
 
@@ -40,7 +40,7 @@ li {
     width: 272px;
 }
 
-#view-by-amount {
+/*#view-by-amount {
     height: 100%;
     left: 450px;
     width: 370px;
@@ -55,7 +55,7 @@ li {
 #large {
     top: 335px;
     left: -40px;
-}
+}*/
 
 /*  Public or private funds view */
 
