--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@ li {
 
 /* 	Information boxes for different chart layouts */
 /* Positioning */
-#initial-content, #a, #b, #c, #d, #e, #f/*, #view-by-amount, #enormous, #huge, #large*/, #view-party-type, #view-donor-type, #view-source-type, #partyInfo, #conservative, #labour, #libdem, #individual, #company, #union, #society, #other, #public-or-private-money, #public-or-private-money-split, #private-money, #public-money { 
+#initial-content, #a, #b, #c, #d, #e, #f, #view-party-type, #view-donor-type, #view-source-type, #partyInfo, #conservative, #labour, #libdem, #individual, #company, #union, #society, #other, #public-or-private-money, #public-or-private-money-split, #private-money, #public-money { 
     position: absolute; 
 }
 
 /* Initial appearance on load */
-#view-party-type, #view-donor-type, #view-source-type/*, #view-by-amount*/ {
+#view-party-type, #view-donor-type, #view-source-type {
     display: none;
 }
 
@@ -39,23 +39,6 @@ li {
     left: 650px;
     width: 272px;
 }
-
-/*#view-by-amount {
-    height: 100%;
-    left: 450px;
-    width: 370px;
-}
-#enormous {
-    top: 55px;
-}
-#huge {
-    top: 185px;
-    left: 30px;
-}
-#large {
-    top: 335px;
-    left: -40px;
-}*/
 
 /*  Public or private funds view */
 
@@ -80,16 +63,16 @@ li {
 /*  Party view */
 #conservative, #labour, #libdem { padding: 10px; }
 #conservative {
-    background: rgba(255, 0, 0, 0.5);
+    background: rgba(33, 255, 76, 0.8);
     top: 110px;
 }
 #labour {
-    background: rgba(0, 255 , 0, 1);
+    background: rgba(252, 103, 34, 0.8);
     top: 330px;
 }
 #libdem {
-    background: rgba(0, 0, 255, 0.5);
-    top: 550px; 
+    background: rgba(255, 61, 255, 0.8);
+    top: 550px;
 }
 
 /*	Donor type layout */
@@ -169,13 +152,13 @@ circle.active {
     margin: 0.2em;
 }
 .lab {
-    fill: #008000; /*change to green*/
+    fill: #F02233;
 }
 .lib {
-    fill: #0000FF; /*change to blue*/
+    fill: #FDBB30;
 }
 .con {
-    fill: #FF0000; /*change to red*/
+    fill: #087FBD;
 }
 .snp {
     fill: #C9C945;
@@ -218,7 +201,7 @@ https://github.com/yui/pure/blob/master/LICENSE.md
     padding: 0.5em 1.5em 0.5em;
     color: #444;
     /* rgba not supported (IE 8) */
-    color: rgba(0, 0, 0, 0.8);
+    color: rgba(0, 0, 0, 0.80);
     /* rgba supported */
     *color: #444;
     /* IE 6 & 7 */
