--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@ li {
 
 /* 	Information boxes for different chart layouts */
 /* Positioning */
-#initial-content, #a, #b, #c, #d, #e, #f, #view-party-type, #view-donor-type, #view-source-type, #partyInfo, #conservative, #labour, #libdem, #individual, #company, #union, #society, #other, #public-or-private-money, #public-or-private-money-split, #private-money, #public-money { 
+#initial-content, #a, #b, #c, #d, #e, #f, #view-by-amount, #enormous, #huge, #large, #normal, #minor,#view-party-type, #view-donor-type, #view-source-type, #partyInfo, #conservative, #labour, #libdem, #individual, #company, #union, #society, #other, #public-or-private-money, #public-or-private-money-split, #private-money, #public-money {
     position: absolute; 
 }
 
 /* Initial appearance on load */
-#view-party-type, #view-donor-type, #view-source-type {
+#view-party-type, #view-donor-type, #view-source-type, #view-by-amount {
     display: none;
 }
 
@@ -102,6 +102,30 @@ li {
     right: 0
 }
 
+#view-by-amount { /* new gropu by option*/
+    height: 100%;
+    left: 450px;
+    width: 370px;
+}
+#enormous {
+    top: 55px;
+}
+#huge {
+    top: 150px;
+    left: 10px;
+}
+#large {
+    top: 335px;
+    left: -40px;
+}
+#normal {
+    top: 435px;
+    left: 35px;
+}
+#minor {
+    top: 650px;
+    left: -20px;
+}
 /* Value scale */
 
 #value-scale {
